[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/tactical/TacticalCombat.gd" id="1"]

[node name="TacticalCombat" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Root" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Root"]
text = "Tactical Combat (Placeholder)"

[node name="MissionLabel" type="Label" parent="Root"]
unique_name_in_owner = true
text = "Mission: -"

[node name="SelectedLabel" type="Label" parent="Root"]
unique_name_in_owner = true
text = "Selected: (none)"

[node name="BoardContainer" type="SubViewportContainer" parent="Root"]
unique_name_in_owner = true
size_flags_vertical = 3
mouse_filter = 0
clip_contents = true
stretch = true

[node name="BoardViewport" type="SubViewport" parent="Root/BoardContainer"]
unique_name_in_owner = true
size = Vector2i(1024, 540)
disable_3d = true
render_target_update_mode = 4
physics_object_picking = true
handle_input_locally = true

[node name="World" type="Node2D" parent="Root/BoardContainer/BoardViewport"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="Root/BoardContainer/BoardViewport/World"]
enabled = true
position = Vector2(512, 270)

[node name="ReturnButton" type="Button" parent="Root"]
unique_name_in_owner = true
text = "Return to Hideout"

[node name="CompleteButton" type="Button" parent="Root"]
unique_name_in_owner = true
text = "Complete Mission (Stub)"
